<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_action_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:layout_alignParentBottom="true"
    android:background="#f7f7f7"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingTop="@dimen/action_bar_paddingTop">

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.8"
            android:src="@drawable/ic_menu_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.4"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="@dimen/action_bar_textSize"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/explore_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.8"
            android:src="@drawable/ic_feed_add_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.4"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/explore"
            android:textSize="@dimen/action_bar_textSize"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:src="@drawable/ic_favorite_border_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.4"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/favorite"
            android:textSize="@dimen/action_bar_textSize"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/followed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.8"
            android:src="@drawable/ic_add_to_photos_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.4"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/followed"
            android:textSize="@dimen/action_bar_textSize"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="0.8"
            android:src="@drawable/ic_insert_emoticon_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:fontFamily="Nunito"
            android:gravity="center"
            android:text="@string/account"
            android:textSize="@dimen/action_bar_textSize"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>