<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainBackground"
    tools:context="com.example.android.listenny.Share">

    <include
        android:id="@+id/expand_less"
        layout="@layout/share_back" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/action_bar"
        android:layout_below="@+id/expand_less"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/scroll_view_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:paddingBottom="15dp"
                android:text="@string/share_welcome"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="Instant Shares"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/everyone" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="Everyone"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/share_friend" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="Friend"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_weight="1">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/email"
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/email" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="Email"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="Timed Shares"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/time" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="In 1h"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/set_time" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="Set timer"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_weight="1">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/birthday" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="Birthday"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="120dp"
                android:text="@string/description_shares_three"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_shares_one" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="120dp"
                android:text="@string/description_shares_two" />

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/my_action_bar"
        layout="@layout/action_bar" />

    <include layout="@layout/playing_float" />

</RelativeLayout>
